Fix install command truncation
Fixes: https://github.com/helm/monocular/issues/580

--- a/frontend/src/app/chart-details/chart-details-usage/chart-details-usage.component.scss
+++ b/frontend/src/app/chart-details/chart-details-usage/chart-details-usage.component.scss
@@ -22,8 +22,6 @@ mat-tab-body {
   }
 
   .mat-input-element {
-    width: calc(100% - 5em);
-
     .mat-input-wrapper {
       margin: 1em 0 .5em;
     }
